k3s/gaia-x-infra/gx-registry/deployment-registry.yaml
---
# Source: gx-registry/templates/deployment-registry.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gx-registry
  namespace: infra
  labels:
    app.kubernetes.io/name: gx-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gx-registry
  template:
    metadata:
      annotations:
        randstring: "AZtvXjSD"
      labels:
        app.kubernetes.io/name: gx-registry
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: gx-registry
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          image: "registry.gitlab.com/gaia-x/lab/compliance/gx-registry:v2.8.1"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: registry-ipfs-data
              mountPath: /data/ipfs
            - name: trust-anchor
              mountPath: /data/ipfs/registry/
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            periodSeconds: 15
            initialDelaySeconds: 15
            failureThreshold: 10
            successThreshold: 1
            httpGet:
              path: /v2
              port: 3000
          readinessProbe:
            periodSeconds: 15
            initialDelaySeconds: 15
            failureThreshold: 10
            successThreshold: 1
            httpGet:
              path: /v2
              port: 3000
          resources: {}
      volumes:
        - name: trust-anchor
          emptyDir: {}
        - name: registry-ipfs-data
          emptyDir: {}
        - name: ca-cert
          secret:
            secretName: registry.127.0.0.1.nip.io-tls
            items:
              - key: ca.crt
                path: ca.crt
